--- a/templates/actors/partials/header.html
+++ b/templates/actors/partials/header.html
@@ -1,6 +1,6 @@
 <header class="sheet-header">
     <div class="scion-header">
-        <h1>HERO</h1>
+        <h1>{{localize "HERO"}}</h1>
     </div>
 
     {{!-- Removi a tag <form> manual. O root já é um form. --}}
@@ -12,7 +12,7 @@
         <div class="column">
         <div class="row">
             <div class="column">
-            <label for="name">Name</label>
+            <label for="name">{{localize "HEADER.NAME"}}</label>
             <input
             type="text"
             id="name"
@@ -24,7 +24,7 @@
         </div>
         <div class="row">
             <div class="column">
-            <label for="player">Player</label>
+            <label for="player">{{localize "HEADER.PLAYER"}}</label>
             <input
                 type="text"
                 id="player"
@@ -38,7 +38,7 @@
         <div class="column">
         <div class="row">
             <div class="column">
-            <label for="calling">Calling</label>
+            <label for="calling">{{localize "HEADER.CALLING"}}</label>
             <input
                 type="text"
                 id="calling"
@@ -50,7 +50,7 @@
         </div>
         <div class="row">
             <div class="column">
-            <label for="nature">Nature</label>
+            <label for="nature">{{localize "HEADER.NATURE"}}</label>
             <input
                 type="text"
                 id="nature"
@@ -64,7 +64,7 @@
         <div class="column">
         <div class="row">
             <div class="column">
-            <label for="pantheon">Pantheon</label>
+            <label for="pantheon">{{localize "HEADER.PANTHEON"}}</label>
             <input
                 type="text"
                 id="pantheon"
@@ -90,7 +90,7 @@
         </div>
         <div class="row">
             <div class="column">
-            <label for="god">God</label>
+            <label for="god">{{localize "HEADER.GOD"}}</label>
             <input
                 type="text"
                 id="god"
