--- a/templates/actors/dialogs/difficulty.html
+++ b/templates/actors/dialogs/difficulty.html
@@ -1,7 +1,7 @@
 <form autocomplete="off" class="difficulty-dialog-form">
   <section class="difficulty-dialog-content">
     <div class="difficulty">
-      <label for="difficulty">Difficulty</label>
+      <label for="difficulty">{{localize "LABELS.DIFFICULTY"}}</label>
       <input type="number" name="difficulty" value="7" />
     </div>
   </section>
