--- a/templates/actors/dialogs/choose-attr.html
+++ b/templates/actors/dialogs/choose-attr.html
@@ -1,17 +1,17 @@
 <form autocomplete="off" class="attr-dialog-form">
   <div class="attr-dialog-group">
     <header class="attr-dialog-group-header">
-      <h1>Choose the Attribute</h1>
+      <h1>{{localize "LABELS.CHOOSE_ATTRIBUTE"}}</h1>
     </header>
     <section class="attr-dialog-content">
       <select name="attr-dice-roll">
-        <option value="">Attr</option>
+        <option value="">{{localize "LABELS.CHOOSE_ATTRIBUTE"}}</option>
         {{#each data.attrKeys as |attr|}}
         <option value="{{attr}}">{{attr}}</option>
         {{/each}}
       </select>
       <div class="difficulty">
-        <label for="difficulty">Difficulty</label>
+        <label for="difficulty">{{localize "LABELS.DIFFICULTY"}}</label>
         <input type="number" name="difficulty" value="7" />
       </div>
     </section>
