--- a/templates/actors/dialogs/damage-atk.html
+++ b/templates/actors/dialogs/damage-atk.html
@@ -1,12 +1,12 @@
 <form autocomplete="off" class="damage-atk-form">
   <div class="damage-atk-group">
     <header class="damage-atk-group-header">
-      <h1>Damage Attack</h1>
+      <h1>{{localize "LABELS.DAMAGE_ATACK"}}</h1>
       <h2>{{data.weapon.name}}</h2>
     </header>
     <section class="damage-atk-content">
       <div class="extra-info">
-        <label for="extra-dices">Extra Dices:</label>
+        <label for="extra-dices">{{localize "LABELS.EXTRA_DICES"}}:</label>
         <input type="text" name="extra-dices" value="0" />
       </div>
     </section>
